fixed spacing on about page

--- a/deal_thief/static/assets/css/modules.css
+++ b/deal_thief/static/assets/css/modules.css
@@ -175,3 +175,7 @@
 	width: 6em;
 	background: #FF530D;
 }
+
+#about-page .row {
+	margin-bottom: 3em;
+}
